# merge_picture

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_zh.md  algo.md  build.bat  optimize.md  prd.md
src/: bar_detector.cpp  bar_detector.h  image_io.cpp  image_io.h  main.cpp  overlap_finder.cpp  overlap_finder.h  row_signature.cpp  row_signature.h  sticky_header.cpp  sticky_header.h  stitcher.cpp  stitcher.h
tests/: picmerge_tests.cpp
